welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value reelLength
  reelLength=4
  ^arrayFront9:4: error: not found: value reelLength
    reelLength=nums.length
    ^arrayFront9:6: error: not found: value reelLength
  for (i <- 0 to reelLength-1) {
                 ^